Fixes footer alignment

--- a/_sass/modules/_footer.scss
+++ b/_sass/modules/_footer.scss
@@ -12,7 +12,7 @@
 
   @include respond-to('large-plus') {
     margin: 0 auto;
-    max-width: 38em;
+    max-width: 35em;
   }
 
   hr {
